# ducklake-demo

./: .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt  start.py
duck_lakehouse/: __init__.py
duck_lakehouse/dashboard/: app.py  requirements.txt
duck_lakehouse/dashboard/static/: app.js  index.html  styles.css
duck_lakehouse/data_generator/: __init__.py  __main__.py  generate_v5_data.py  v5_fields.py
duck_lakehouse/dbt/dbt_ducklake/: dbt_project.yml  packages.yml  profiles.yml
duck_lakehouse/dbt/dbt_ducklake/macros/: v5_tests.sql
duck_lakehouse/dbt/dbt_ducklake/models/marts/: _marts__models.yml  dim_patient.sql  dim_site.sql  dim_vaccine.sql  fct_vaccination_events.sql  mart_vaccination_summary.sql
duck_lakehouse/dbt/dbt_ducklake/models/staging/: _staging__models.yml  _staging__sources.yml  (+1 more)
duck_lakehouse/dbt/dbt_ducklake/tests/: test_action_flag_values.sql  test_datetime_format.sql  test_dob_format.sql  test_dose_amount_decimal.sql  test_dose_sequence_values.sql  test_expiry_date_format.sql  test_gender_code_values.sql  test_mandatory_fields_not_empty.sql  test_nhs_number_format.sql  test_postcode_format.sql  test_primary_source_values.sql  test_recorded_date_format.sql  test_site_code_type_uri.sql  test_snomed_code_format.sql  test_unique_id_combination.sql  test_unique_id_dedup.sql  test_v5_data_quality.sql  test_v5_mandatory_fields.sql  test_v5_spec_compliance.sql
duck_lakehouse/ducklake/: __init__.py  __main__.py  ingest.py  init_ducklake.py
duck_lakehouse/mesh_simulator/: __init__.py  __main__.py  mesh_simulator.py
