[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "duck-lakehouse"
version = "0.1.0"
description = "DuckLake Dashboard - NHS Vaccination v5 Pipeline Orchestrator"
requires-python = ">=3.11"
dependencies = [
    "flask>=2.3.0",
    "flask-cors>=4.0.0",
    "duckdb>=0.9.0",
    "requests>=2.28.0",
    "dbt-duckdb>=1.7.0",
    "aiohttp>=3.9.0",
    "gunicorn>=21.2.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["duck_lakehouse*"]
